# SE_Lab_project_composite

./: CMakeLists.txt  README.md  report.md
include/: component.h  composite.h  directory.h  file.h  file_system_component.h  leaf.h
src/: component.cpp  composite.cpp  directory.cpp  file.cpp  file_system_component.cpp  leaf.cpp  main.cpp
tests/: CMakeLists.txt  test_composite.cpp  test_file_system.cpp
